--- a/node/MRE_mycode/views/farms/detail.ejs
+++ b/node/MRE_mycode/views/farms/detail.ejs
@@ -20,11 +20,22 @@
     <li>Email: <%= farm.email%>
     </li>
   </ul>
+  <h3>Products:</h3>
+  <ul>
+    <% for(let prod of farm.products) { %>
+    <li><a href="/products/<%= prod._id %>"><%= prod.name %></a></li>
+    <% } %>
+  </ul>
   <a href="/farms">Back</a>
-  <a href="/farms/<%= farm._id %>/edit">Edit</a>
+  <a href="/farms/<%= farm._id %>/products/new ">Add Product</a>
+
   <form action="/farms/<%= farm._id %>?_method=DELETE" method="POST">
     <button>DELETE</button>
   </form>
+  <!-- <a href="/farms/<!--%= farm._id %>/edit">Edit</a>
+  <form action="/farms/<!--%= farm._id %>?_method=DELETE" method="POST">
+    <button>DELETE</button>
+  </form> -->
 </body>
 
 </html>
