--- a/node/MRE_mycode/views/products/detail.ejs
+++ b/node/MRE_mycode/views/products/detail.ejs
@@ -2,31 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= product.name %> Details
-    </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+    <%= product.name %> Details
+  </title>
 </head>
 
 <body>
-    <h1>
-        <%= product.name %>
-    </h1>
-    <ul>
-        <li>Category: <a href="/products?category=<%= product.category%>">
-                <%= product.category%>
-            </a>
-        </li>
-        <li>Price: $ <%= product.price%>
-        </li>
-    </ul>
-    <a href="/products">Back</a>
-    <a href="/products/<%= product._id %>/edit">Edit</a>
-    <form action="/products/<%= product._id %>?_method=DELETE" method="POST">
-        <button>DELETE</button>
-    </form>
+  <h1>
+    <%= product.name %>
+  </h1>
+  <ul>
+    <li>Category: <a href="/products?category=<%= product.category%>">
+        <%= product.category%>
+      </a>
+    </li>
+    <li>Price: $ <%= product.price%>
+    </li>
+  </ul>
+
+  <h4>Farm: <a href="/farms/<%= product.farm._id %> "><%= product.farm.name %> </a></h4>
+
+  <!-- <a href="/products">Back</a>
+  <a href="/products/<%= product._id %>/edit">Edit</a>
+  <form action="/products/<%= product._id %>?_method=DELETE" method="POST">
+    <button>DELETE</button>
+  </form> -->
 </body>
 
 </html>
