--- a/node/MRE_mycode/views/products/new.ejs
+++ b/node/MRE_mycode/views/products/new.ejs
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <h1>Add New Product:</h1>
-  <form action="/farms/<%= id %>/products " method="POST">
+  <h1><%= farm.name %> </h1>
+  <h3>Add New Product:</h3>
+  <form action="/farms/<%= farm._id %>/products " method="POST">
     <div>
       <label for="name">Product: </label>
       <input type="text" id="name" name="name" placeholder="product name">
@@ -31,7 +32,7 @@
     </div>
     <div><button>Create Product</button></div>
   </form>
-  <a href="/products">Cancel</a>
+  <a href="/farms/<%= farm._id %>">Back to Farm</a>
 </body>
 
 </html>
