--- a/YelpCamp-mine/views/campgrounds/show.ejs
+++ b/YelpCamp-mine/views/campgrounds/show.ejs
@@ -4,8 +4,7 @@
 
 <div class="row">
   <div class="col-6">
-
-    <div id='mapUI' style='width: 400px; height: 300px;'></div>
+    <div id='mapUI'></div>
     <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <% camp.images.forEach((img, i) => { %>
