--- a/YelpCamp-mine/views/campgrounds/show.ejs
+++ b/YelpCamp-mine/views/campgrounds/show.ejs
@@ -4,7 +4,6 @@
 
 <div class="row">
   <div class="col-6">
-    <div id='mapUI'></div>
     <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <% camp.images.forEach((img, i) => { %>
@@ -50,8 +49,10 @@
 
   </div>
   <div class="col-6">
+    <div id='mapUI'></div>
+
     <% if (currUser) { %>
-    <h2>Leave A Review</h2>
+    <h2 class="mt-3">Leave A Review</h2>
     <form action="/campgrounds/<%= camp._id %>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
       <div class="mt-4">
         <fieldset class="starability-coinFlip">
@@ -68,7 +69,7 @@
           <label for="first-rate5" title="Amazing">5 stars</label>
         </fieldset>
       </div>
-      <div class="mb-3">
+      <div class="mt-0 mb-3">
         <label class="form-label" for="body">Review:</label>
         <textarea class="form-control" name="review[body]" id="body" cols="30" rows="4" required></textarea>
         <div class="valid-feedback">Looks good!</div>
