--- a/YelpCamp-mine/views/home.ejs
+++ b/YelpCamp-mine/views/home.ejs
@@ -33,8 +33,8 @@
     </header>
     <!--padding left & right -->
     <main class="px-3">
-      <h1>YelpCamp</h1>
-      <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+      <h1>Ylan's YelpCamp</h1>
+      <p class="lead"> Welcome to Ylan's YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
         Feel free to share some of your own and comment on others!</p>
       <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
         Campgrounds</a>
